Round 3 of feedback

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 <div id="InfoBlock">
     <div class="wrapper">
-        <h1>The kraken suite</h1>
+        <h2>The kraken suite</h2>
 
         <p>
             Kraken is the main pillar of the framework, but it works in concert with the following modules to provide
@@ -100,29 +100,25 @@
                 <li class="lusca">
                     <img src="img/Lusca.png" alt="Lusca">
 
-                    <h3>Lusca</h3>
-
+                    <div class="moduleTitle">Lusca</div>
                     <a href="http://github.com/paypal/lusca">Application security</a>
                 </li>
                 <li class="makara">
                     <img src="img/Makara.png" alt="makara">
 
-                    <h3>Makara</h3>
-
+                    <div class="moduleTitle">Makara</div>
                     <a href="http://github.com/paypal/makara">Internationalization</a>
                 </li>
                 <li class="adaro">
                     <img src="img/Adaro.png" alt="Adaro">
 
-                    <h3>Adaro</h3>
-
+                    <div class="moduleTitle">Adaro</div>
                     <a href="http://github.com/paypal/adaro">Dust-js Support</a>
                 </li>
                 <li class="kappa">
                     <img src="img/Kappa.png" alt="Kappa">
 
-                    <h3>Kappa</h3>
-
+                    <div class="moduleTitle">Kappa</div>
                     <a href="http://github.com/paypal/kappa">NPM Proxy</a>
                 </li>
             </ul>
@@ -138,7 +134,7 @@
             <div id="cast">
                 <ul>
 
-                    <li class="generator" tabindex="4">
+                    <li class="generator">
                         <a target="_blank" href="http://github.com/paypal/generator-kraken">
                             <div class="hex2">
                                 <div>G</div>
@@ -153,7 +149,7 @@
                             </p>
                         </div>
                     </li>
-                    <li target="_blank" class="enrouten" tabindex="9">
+                    <li target="_blank" class="enrouten">
                         <a href="http://github.com/paypal/express-enrouten">
                             <div class="hex2">
                                 <div>E</div>
@@ -169,7 +165,7 @@
                         </div>
                     </li>
 
-                    <li target="_blank" class="webtools" tabindex="10">
+                    <li target="_blank" class="webtools">
                         <a href="http://github.com/paypal/kraken-devtools">
                             <div class="hex2">
                                 <div>D</div>
@@ -185,7 +181,7 @@
                         </div>
                     </li>
                     <!--
-                     <li class="shortstop" tabindex="5">
+                     <li class="shortstop">
                         <a href="#">
                             <div class="hex2">
                                 <div>S</div>
@@ -199,7 +195,7 @@
                             </p>
                         </div>
                     </li>
-                    <li class="findatag" tabindex="6">
+                    <li class="findatag">
                         <a href="#">
                             <div class="hex2">
                                 <div>F</div>
@@ -214,7 +210,7 @@
                             </p>
                         </div>
                     </li>
-                    <li class="spud" tabindex="7">
+                    <li class="spud">
                         <a href="#">
                             <div class="hex2">
                                 <div>U</div>
@@ -242,11 +238,9 @@
 </div>
 <div class="docs">
 <div class="wrapper">
-<h1 id="QuickStart">Getting started with kraken</h1>
+<h2 id="QuickStart">Getting started with kraken</h2>
 
-<div class="staticMenu">
-
-</div>
+<div class="staticMenu"></div>
 <div class="docsContent">
 <section>
     <h2>Quick Start</h2>
@@ -545,6 +539,7 @@ res.render(index,model);</pre>
 </section>
 <section>
     <h2>Documentation</h2>
+
     <p>
         To view the full documentation please visit <a href="http://github.com/paypal/kraken-js">kraken</a> on GitHub
     </p>
@@ -586,7 +581,7 @@ res.render(index,model);</pre>
         Designed with ❤ and care at <a href="http://www.paypal.com" alt="PayPal">PayPal</a><br>
         Code Licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0.html" alt="Apache License">Apache
         License v2.0</a>, documentation under <a href="http://creativecommons.org/licenses/by/3.0/legalcode"
-                                 alt="Cretive Commons License">CC BY 3.0</a>
+                                                 alt="Cretive Commons License">CC BY 3.0</a>
     </div>
 </footer>
 
