--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         </a>
 
                         <div class="info">
-                            <h4>Generator</h4>
+                            <strong>Generator</strong>
 
                             <p>
                                 A Yeoman generator for kraken projects
@@ -319,7 +319,7 @@ Listening on 8000</pre>
 
         Let's start by looking at the base structure of the project you just created:
     </p>
-    <h5>Structure of a kraken project</h5>
+    <h4>Structure of a kraken project</h4>
 <pre class="prettyprint lang-html">
 /config
 Application and middleware configuration
