--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@ module.exports = function (server) {
 
     <p>
         Kraken uses LinkedIn's <a href="http://linkedin.github.io/dustjs/">DustJS</a> as the templating language of
-        choice (This can be changed by the user if desired). <a href="http://github.com/adaro">Adaro</a> is the module
+        choice (This can be changed by the user if desired). <a href="http://github.com/paypal/adaro">Adaro</a> is the module
         responsible for rendering and managing the templates.
     </p>
 
@@ -498,7 +498,7 @@ module.exports = function (server) {
     <h3 id="Localization">Localization</h3>
 
     <p>
-        Thanks to <a href="http://github.com/makara">Makara</a>, kraken has
+        Thanks to <a href="http://github.com/paypal/makara">Makara</a>, kraken has
         the ability to load content bundles on the fly, based on the request context. If we wanted to greet a
         user in their native language (e.g.: Spanish), we can simply add this context to the response before rendering
         the template:
